feat: ipc and local storage

--- a/src/compoments/layout/index.less
+++ b/src/compoments/layout/index.less
@@ -5,7 +5,10 @@
   }
   &-inner {
     .ant-layout-sider {
-      background-color: #fff;
+      //background-color: #fff;
+      .ant-menu {
+        height: 100%;
+      }
     }
   }
 }
